--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,26 +2,28 @@
 
 {% block content %}
 
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
 
-<div class='col-md-4 col-md-offset-4'>
+<div class="main">
     <h2>Login</h2>
     <form action="" method="POST">
         {{ form.csrf_token }}
-        <div class="form-group">
+        <div class="login">
             <label for="">Username</label>
             {{ form.username(_class="form-controll",
-                placeholder="seu_usuário") }}
+                placeholder="Username") }}
         </div>
-        <div class="form-group">
+        <div class="login">
             <label for="">Password</label>
-            {{ form.password(_class="form-control") }}
+            {{ form.password(_class="form-control",
+                placeholder="Password") }}
         </div>
         <div class="checkbox">
             <label for="">
                 {{ form.remember_me }} Remember-me
             </label>
         </div>
-        <button type="submit", class="btn btn-default">Submit</button>
+        <button type="submit">Login</button>
     </form>
 </div>
 {% endblock %}
