--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>OTibaH</h1>
+      <h1>ManitM</h1>
       <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -23,6 +23,7 @@
     <footer>
       <p>&copy; 2021 Clayton Garcia da Silva, Br.</p>
     </footer>
+    <!-- if you wanna make the world a better place take a look ay yourself, and make a change -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
   </body>
