--- a/app/static/css/style_base.css
+++ b/app/static/css/style_base.css
@@ -14,15 +14,18 @@
 }
 
 body {
-    background-color: #292a2def;
+    background-color: #292a2d;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    margin: auto;
+    justify-content: center;
     width: 100%;
-    height: 100%;
-    
+    height: auto;
 }
 
 header {
-    position: static;
+    position: fixed;
+    top:0;
     text-align: left;
     background-color: #1d1e1f;
     width: 100%;
@@ -35,7 +38,7 @@ h1 {
     font-size: 2em;
     padding-left: 5px;
     margin-bottom: -10px;
-    text-shadow: 2px 2px 0px rgba(255, 255, 255, 0.13);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
 }
 
 nav {
@@ -43,6 +46,7 @@ nav {
     text-align: right;
     padding: 10px;
     margin-top: -38px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
 }
 
 nav > a{
@@ -59,22 +63,11 @@ nav a:hover{
     color:white;
 }
 
-main {
-    padding: 20px;
-    margin: 40px auto;
-    text-align: center;
-    max-width: 600px;
-    height: 1000px;
-    background-color: var(--color4);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.534);
-    border-radius: 8px;
-}
-
 footer {
+    position: fixed;
+    bottom: 0px;
     background-color: #1d1e1f;
     color: white;
-    bottom: 0;
-    position: static;
     width: 100%;
     text-align: center;
 }
