--- a/app/static/css/style-base.css
+++ b/app/static/css/style-base.css
@@ -31,7 +31,7 @@ header {
     width: 100%;
 }
 
-h1 {
+#h1base{
     color: var(--color4);
     text-align: left;
     width: 99%;
@@ -39,6 +39,10 @@ h1 {
     padding-left: 5px;
     margin-bottom: -10px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+}
+
+#home {
+    text-decoration: none;
 }
 
 nav {
