--- a/app/static/css/style-register.css
+++ b/app/static/css/style-register.css
@@ -20,11 +20,10 @@ main {
     text-align: center;
     max-width: 600px;
     height: auto;
-    height: auto;
-    background-color: var(--color2);
+    background-image: linear-gradient(to bottom, var(--color3), var(--color2));
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
-    border-radius: 8px;
+    border-radius: 10px;
 }
 
 #titulo {
@@ -34,10 +33,14 @@ main {
     padding: 10px;
 }
 
-#username, #password, button {
-    border-radius: 5px;
+#name, #lastname {
+    width: 30%;
+}
+
+#email, #password, #confirm-pasword{
     height: 30px;
     width: 65%;
+    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.493);
 }
 
 .campo input, button {
@@ -45,7 +48,7 @@ main {
     margin: 0.3em;
     text-align: center;
     font-size: 1.2em;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
 }
 
 .remember {
@@ -53,20 +56,25 @@ main {
 }
 
 button {
+    background-image: linear-gradient(to bottom, var(--color5), var(--color3));
+    color: white;
+    height: 30px;
+    width: 65%;
     font-size: 1.2em;
     border: 0;
     margin-bottom: 1em;
     border: white;
     padding: 0.2em 0.6em;
-    width: 65%;
-    height: 30px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.507);
     transition-duration: 0.5s;
 }
 
 button:hover {
-    color: white;
-    background-color: var(--color5);
-    box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.2);
-    text-shadow: none;
+    color: black;
+    width: 70%;
+}
+
+button:focus {
+    box-shadow: inset 2px 2px 2px rgb(0, 0, 0);
 }
