--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Toilter{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_base.css') }}" rel="stylesheet">
+    <title>{% block title %}MitM{% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style-base.css') }}" rel="stylesheet">
   </head>
   <body>
     <header>
-      <h1>ManitM</h1>
+      <a href="/home" id="home"><h1 id="h1base">MitM</h1></a>
       <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Login</a>
+        <a href="/home">Home</a>
+        <a href="/about">About</a>
+        <a href="/login">Login</a>
       </nav>
     </header>
 
