--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,18 @@
       </nav>
     </header>
 
+  <div>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+  </div>
+
       {% block content %}
       {% endblock %}
 
