--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,21 +11,21 @@
         <h2 id="titulo">Login</h2>
     </div>
     <form action="" method="POST">
+        {{ form.csrf_token }}
         <div class="campo">
             <label for="username">
-                <input class="text" type="text" name="username"  id="username" autocomplete="username" placeholder="Username" required>
+                {{ form.username(id="username", placeholder="Username") }}
             </label>
         </div>
         <div class="campo">
             <label for="password">
-                <input class="text" type="password" name="password" id="password" placeholder="Password" required>
+                {{ form.password(id="password", placeholder="Password") }}
             </label>
         </div>
         <div class="campo">
             <label for="remember" class="check">
-                <input type="checkbox" id="checkbox" value="Remember-me"checked="checked">
+                {{ form.remember_me(id="checkbox") }}<strong>Remember me</strong>
             </label>
-            <label class="remember"><strong>Remember me</strong></label>
         </div>
         <div class="campo">
             <button class="button" type="submit" >Enter</button>
