configurado um flash para validar o login ou invalidar caso as informaçoes estejam ou nao no banco de dados

--- a/app/static/css/style-form.css
+++ b/app/static/css/style-form.css
@@ -78,3 +78,13 @@ button:focus {
 .check {
     color: white;
 }
+
+.flash {
+    color: white;
+    width: 100%;
+    text-align: center;
+}
+
+.flash ul {
+    list-style: none;
+}
