--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -47,7 +47,7 @@
 
         <div class="campo">
             <label for="terms" class="terms">
-                {{ form.terms(id="terms") }}<strong>I read and accept the <a href="#">terms of use</a></strong>
+                {{ form.terms(id="terms") }}<strong>I read and accept the <a href="/terms">terms of use</a></strong>
         </div>
         <div class="campo">
             <button class="button" type="submit" >Submit</button>
