Algumas mudanças que funcionam mas precisam ser corrigidas urgentemente

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,7 +24,7 @@
         </div>
         <div class="campo">
             <label for="remember" class="check">
-                {{ form.remember_me(id="checkbox") }}<strong>Remember me</strong>
+                {{ form.remember_me(id="checkbox") }}<strong>Keep me Connected</strong>
             </label>
         </div>
         <div class="campo">
