Funçao login configurada com sucesso

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,7 +15,7 @@
                     <button class="button" type="submit" >Login</button>
             </form>
             <form action="/register">
-                    <button class="button" type="submit">Register</button>
+                    <button class="button" type="submit">I want to register</button>
             </form>
         </div>
        
