--- a/app/static/css/style-register.css
+++ b/app/static/css/style-register.css
@@ -100,6 +100,17 @@ button:focus {
     box-shadow: inset 2px 2px 2px rgb(0, 0, 0);
 }
 
+#haveaccount {
+    color: white;
+    text-decoration: none;
+    transition-duration: 0.5s;
+}
+
+#haveaccount:hover {
+    color: black;
+    text-decoration: underline;
+}
+
 .flash {
     color: white;
     width: 100%;
