--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -42,7 +42,7 @@
             </div>
             <div class="campo">
                 <button class="button" type="submit" >Enter</button><br>
-                <a href="/register">I want to register</a>
+                <a id="register" href="/register">I want to register</a>
             </div>
             <div class="flash">
                 {% with messages = get_flashed_messages() %}
