--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -58,7 +58,7 @@
             </div>
             <div class="campo">
                 <label for="terms" class="terms">
-                    {{ form.terms(id="terms") }}<strong>I read and accept the <a href="/terms">terms of use</a></strong>
+                    {{ form.terms(id="terms") }}<strong>I read and accept the <a id="terms" href="/terms">terms of use</a></strong>
             </div>
             <div class="campo">
                 <button class="button" type="submit" >Submit</button><br>
@@ -75,7 +75,6 @@
                     {% endif %}
                 {% endwith %}
               </div>
-        
         </form>
     </div>
     {% endif %}
