--- a/app/static/css/style-login.css
+++ b/app/static/css/style-login.css
@@ -13,6 +13,13 @@
     padding: 0px;
 }
 
+body {
+    background-color: #292a2d;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: auto;
+}
+
 main {
     padding: 20px;
     margin:auto;
