nova tela para esqueci minha senha

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -42,7 +42,8 @@
             </div>
             <div class="campo">
                 <button class="button" type="submit" >Enter</button><br>
-                <a id="register" href="/register">I want to register</a>
+                <a id="forgot-password" href="/forgot-password">I forgot my password</a><br>
+                <p id="register">Don't have an accont? <a href="/register">Register!</a></p>
             </div>
             <div class="flash">
                 {% with messages = get_flashed_messages() %}
