--- a/app/static/css/style-login.css
+++ b/app/static/css/style-login.css
@@ -82,16 +82,33 @@ button:focus {
     box-shadow: inset 2px 2px 2px rgb(0, 0, 0);
 }
 
-#register {
+#forgot-password {
     color: var(--color5);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
-    text-decoration: none;
-    transition-duration: 0.2s;
+    transition: all 300ms ease;
 }
 
-#register:hover {
+#forgot-password:hover {
     color: white;
-    text-decoration: underline;
+    text-decoration: none;
+}
+
+#register {
+    font-size: 0.8rem;
+    padding-top: 10px;
+    color: #eee;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+}
+
+#register a {
+    color: var(--color5);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    transition: all 300ms ease;
+}
+
+#register a:hover {
+    color: white;
+    text-decoration: none;
 }
 
 .check {
