--- a/app/static/css/style-base.css
+++ b/app/static/css/style-base.css
@@ -1,4 +1,5 @@
 @charset 'UTF8';
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Staatliches&display=swap');
 
 :root {
     --color1: #5021FA;
@@ -6,72 +7,87 @@
     --cloro3: #2B6CF5;
     --color4: #1D8DDE;
     --color5: #21D8FA;
+    --color6: #292a2d;
+    --color7: #1d1e1f;
+    --color8: #eee;
 }
 
 * {
+    box-sizing: border-box;
     margin: 0px;
     padding: 0px;
 }
 
 body {
-    background-color: #292a2d;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--color6);
+    font-family: 'Roboto', sans-serif;
     width: 100%;
     height: auto;
 }
 
-.header-main {
+#header-main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     position: sticky;
     top:0;
-    background-color: #1d1e1f;
+    background-color: var(--color7);
     width: 100%;
 }
 
-#h1home{
-    color: var(--color4);
-    text-align: left;
+#header-container {
+    display: flex;
     width: 99%;
-    font-size: 2em;
+    padding: 2px;  
+}
+
+#header-container .title-main a {
+    font-family: 'Fjalla One', sans-serif;
+    text-decoration: none;
+    color: var(--color4);
+    text-align: flex-start;
+    font-size: 1.8rem;
     padding-left: 5px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
 }
 
-#home {
-    text-decoration: none;
-}
-
-.nav-bar ul{
+#header-container .navbar-main ul{
+    display: flex;
+    justify-content: space-between;
     position: absolute;
     top: 0;
     right: 0;
-    width: auto;
     padding: 10px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    
 }
 
-.nav-bar ul li {
+#header-container .navbar-main ul li {
     display: inline;
+    
 }
 
-.nav-bar > ul li a{
-    color: whitesmoke;
+#header-container .navbar-main > ul li a{
+    color: var(--color8);
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
-    transition-duration: 0.5s; /*Tempinho de transição quando passa o mouse no link (animação)*/
+    transition: all 500ms ease; /*Tempinho de transição quando passa o mouse no link (animação)*/
 }
 
-.nav-bar ul li a:hover{
-    background-color: black;
+#header-container .navbar-main ul li a:hover{
+    background-color: #333;
     color:white;
 }
 
-footer {
+.footer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
     position: fixed;
     bottom: 0px;
-    background-color: #1d1e1f;
-    color: white;
+    background-color: rgba(51, 51, 51, 0.575);
+    color: var(--color8);
     width: 100%;
-    text-align: center;
 }
