--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,19 +4,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}MitMirror{% endblock %}</title>
+    <title>{% block title %}Meu Site{% endblock %}</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-base.css') }}" rel="stylesheet">
   </head>
   <body>
-    <header class="header-main">
-      <a href="/home" id="home"><h1 id="h1home">MitMirror</h1></a>
-      <nav class="nav-bar">
-        <ul>
-          <li><a href="/home">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/login">Login</a></li>
-        </ul>
-      </nav>
+    <header id="header-main">
+      <div id="header-container">
+        <h1 class="title-main">
+          <a href="/home">Meu Site</a>
+        </h1>
+        <nav class="navbar-main">
+          <ul>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/login">Login</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
 
@@ -24,7 +29,7 @@
       {% endblock %}
 
     
-    <footer>
+    <footer class="footer">
       <p>&copy; 2021 Clayton Garcia da Silva, Br.</p>
     </footer>
     <!-- if you wanna make the world a better place take a look ay yourself, and make a change -->
