--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 
 {% extends 'base.html' %}
 
-{% block title %}{{ super() }} - Login{% endblock %}
+{% block title %}{{ super() }} - Home{% endblock %}
 
 {% block content %}
 
