iniciado o refatoramento do front-end da page home

--- a/app/static/css/style-base.css
+++ b/app/static/css/style-base.css
@@ -4,7 +4,7 @@
 :root {
     --color1: #5021FA;
     --color2: #1D27DE;
-    --cloro3: #2B6CF5;
+    --color3: #2B6CF5;
     --color4: #1D8DDE;
     --color5: #21D8FA;
     --color6: #292a2d;
