--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,17 +8,17 @@
 
 <main id="main">
     <div class="main-container">
-        <div>
-            <h2 id="titulo">Bem vindo ao Meu Site!</h2>
+        <div id="title">
+            <h2>Bem vindo ao Meu Site!</h2>
         </div>
-            <div class="campohome">
-                <form action="/login">
-                        <button class="button" type="submit" >Login</button>
-                </form>
-                <form action="/register">
-                        <button class="button" type="submit">I want to register</button>
-                </form>
-            </div>
+        <div id="buttons">
+            <form action="/login">
+                    <button class="button" type="submit" >Login</button>
+            </form>
+            <form action="/register">
+                    <button class="button" type="submit">I want to register</button>
+            </form>
+        </div>
         
         </form>
     </div>
