--- a/app/static/css/style-base.css
+++ b/app/static/css/style-base.css
@@ -71,14 +71,16 @@ body {
     color: var(--color8);
     padding: 10px;
     border-radius: 5px;
+    border: 1px solid var(--color7);
     text-decoration: none;
     font-weight: bold;
-    transition: all 500ms ease; /*Tempinho de transição quando passa o mouse no link (animação)*/
+    transition: all 300ms ease; /*Tempinho de transição quando passa o mouse no link (animação)*/
 }
 
 #header-container .navbar-main ul li a:hover{
     background-color: #333;
     color:white;
+    border: 1px solid #eee;
 }
 
 .footer {
