--- a/app/static/css/style-home.css
+++ b/app/static/css/style-home.css
@@ -37,7 +37,7 @@ body {
 
 }
 
-#main .main-container {
+.main-container {
     height: auto;
     display: flex;
     flex-direction: column;
@@ -45,97 +45,37 @@ body {
     align-items: center;
 }
 
-#titulo {
+#title h2{
     color: white;
     width: 100%;
     font-size: 2.5em;
     padding: 10px;
 }
 
-#username, #password{
-    height: 30px;
-    width: 65%;
-    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.493);
-}
-
-.campo input, button {
-    padding: 0.2em;
-    margin: 0.3em;
-    text-align: center;
-    font-size: 1.2em;
-    border-radius: 8px;
-}
-
-.remember {
-    color: white;
-}
-
 .button {
+    margin: 10px;
+    text-align: center;
+    border-radius: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-image: linear-gradient(to bottom, var(--color5), var(--color3));
-    color: white;
+    color: #eee;
     height: 30px;
     width: 99%;
     font-size: 1.2em;
     margin-bottom: 15px;
-    border: 1px #eee;
+    border: 1px;
     padding: 10px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.507);
 }
 
 .button:hover {
-    color: var(--color1);
+    background-image: linear-gradient(to bottom, var(--color5), var(--color2));
     cursor: pointer;
 }
 
 .button:focus {
     box-shadow: inset 2px 2px 2px rgb(0, 0, 0);
-}
-
-#forgot-password {
-    color: var(--color5);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
-    transition: all 300ms ease;
-}
-
-#forgot-password:hover {
-    color: white;
-    text-decoration: none;
-}
-
-#register {
-    font-size: 0.8rem;
-    padding-top: 10px;
-    color: #eee;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
-}
-
-#register a {
-    color: var(--color5);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
-    transition: all 300ms ease;
-}
-
-#register a:hover {
-    color: white;
-    text-decoration: none;
-}
-
-.check {
-    color: white;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
-}
-
-.flash {
-    color: white;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
-    width: 100%;
-    text-align: center;
-}
-
-.flash ul {
-    list-style: none;
 }
